Fix: nav absoulute spacing

--- a/scss/_colors.scss
+++ b/scss/_colors.scss
@@ -317,7 +317,7 @@ Navbar
   .nav-logo {
     position: absolute;
     top: 50%;
-    left: 65%;
+    left: 75%;
     transform: translate(-50%, -50%);
   }
   .toggle-nav {
