--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -53,7 +53,7 @@ h2 {
 .wrapper {
   padding: 20px;
   margin: 0 auto;
-  text-align: center;
+  text-align: left;
   height: auto;
   overflow: hidden;
   width: 70vw;
