--- a/scss/layouts/_columns.scss
+++ b/scss/layouts/_columns.scss
@@ -25,7 +25,7 @@ html {
   width: 72%;
   float: left;
   min-height: 375px;
-  text-align: justify;
+  // text-align: justify;
   margin-right: 4%;
 }
 
