--- a/scss/layouts/_footer.scss
+++ b/scss/layouts/_footer.scss
@@ -42,7 +42,7 @@ footer .footer-div {
   display: flex;
   align-items: center;
   flex-direction: column;
-  text-align: center;
+  text-align: left;
 }
 
 div.top a {
